# voxinfant

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
api/: app.py
docs/: architecture.md  deployment.md  experiments.md  feature_contract.md
models/: label_classes.json  scaler.pkl  voxinfant_ensemble.pkl
scripts/: cv_aug.py  cv_eval.py  extract_from_processed.py  prepare_aug.py  prepare_data.py  probe.py
src/voxinfant/: __init__.py  config.py  dsp.py  ensemble.py  features.py  inference.py  segmentation.py  train.py
tests/: test_features.py
web/: index.html
